# selkie

./: LICENSE  mise.toml  selkie.cabal
binary/: Main.hs
source/Selkie/: Annotation.hs  Application.hs  Category.hs  Generic.hs  Optics.hs  Profunctor.hs  Utilities.hs
source/Selkie/Annotation/: Category.hs  Profunctor.hs  Types.hs
source/Selkie/Category/: Bicartesian.hs  Cartesian.hs  Category.hs  Class.hs  Cocartesian.hs  Generic.hs
source/Selkie/Monad/: State.hs
source/Selkie/Optics/: Constructor.hs  Field.hs  Helpers.hs  Internal.hs  Types.hs
source/Selkie/Profunctor/: Choice.hs  Class.hs  Generic.hs  Profunctor.hs  Strong.hs
tests/: Main.hs
