cabal-version: 3.0
name: selkie
version: 0.1.0.0

library
  exposed-modules:
    Selkie.Category
    Selkie.Generic
    Selkie.Profunctor

    Selkie.Optics.Constructor
    Selkie.Optics.Field
    Selkie.Optics.Internal
  build-depends:
    , base
    , natural-transformation
    , profunctors
  hs-source-dirs: source
  default-language: GHC2024

-- executable selkie
--   main-is: Main.hs
--   build-depends:
--     , base
--     , selkie
--   hs-source-dirs: binary
--   default-language: GHC2024

-- test-suite selkie-test
--   default-language: GHC2024
--   type: exitcode-stdio-1.0
--   hs-source-dirs: tests
--   main-is: Main.hs
--   build-depends:
--     , base
--     , selkie